# chess-piece-eval

./: .gitignore  README.md  pyproject.toml
src/config/: .env  __init__.py  data.py  model.py
src/data_utils/: dataset.py  preprocess.py  utils.py
src/model/: model.py  train.py
